--- a/gst-plugins-base/debian/control
+++ b/gst-plugins-base/debian/control
@@ -2,19 +2,30 @@ Source: gst-plugins
 Section: libs
 Priority: optional
 Maintainer: David I. Lehn <dlehn@vt.edu>
-Build-Depends: debhelper (>= 3.0.0), libgstreamer-dev (>= 0.3.4), gstreamer-lib-core-dev (>= 0.3.4), xlibs-dev (>= 4.1.0), xlibs-pic (>= 4.1.0), libxml2-dev (>= 2.4.16), zlib1g-dev (>= 1:1.1.4), libghttp-dev (>= 1.0.6), libglib2.0-dev (>= 2.0.1), libglade0-dev (>= 0.14), libglade-gnome0-dev (>= 0.14), libesd0-dev (>= 0.2.22), libcdparanoia0-dev (>= 3a9.7), libvorbis-dev (>= 1.0rc3), libgnome-dev (>= 1.2.11), libasound1-dev (>= 0.5.10) | libasound2-dev (>= 0.9), libghttp-dev (>= 1.0.9), libjpeg62-dev (>= 6b), aalib1-dev (>= 1.4p4), libmad0-dev (>= 0.14.2b), hermes1-dev (>= 1.3.1), libarts-dev (>= 2.1.2), libgsm1-dev (>= 1.0.10), libgnomevfs2-dev (>= 1.9.7), libsdl1.2-dev (>= 1.2.3), libaudiofile-dev (>= 0.2.1), libavifile0.6-dev (>= 0.6.0.20011207), festival-dev (>= 1.4.1p), libflac-dev (>= 1.0.2), libmpeg2-1-dev (>= 0.2.1), libcpuaccel0-dev (>= 0.2.1), pkg-config (>= 0.11.0), libsidplay1-dev (>= 1.36.47), libmikmod2-dev (>= 3.1.9), a52dec-dev (>= 0.7.3), libdvdread2 (>= 0.9.2), libid3tag0-dev (>= 0.14.2b)
+Build-Depends: debhelper (>= 3.0.0), libgstreamer-dev (>= 0.4.0), gstreamer-core-libs-dev (>= 0.4.0), xlibs-dev (>= 4.1.0), xlibs-pic (>= 4.1.0), libxml2-dev (>= 2.4.23), zlib1g-dev (>= 1:1.1.4), libghttp-dev (>= 1.0.9), libglib2.0-dev (>= 2.0.4), libesd0-dev (>= 0.2.28), libcdparanoia0-dev (>= 3a9.8), libvorbis-dev (>= 1.0.0), libasound2-dev (>= 0.9.0), libjpeg62-dev (>= 6b), aalib1-dev (>= 1.4p5), libmad0-dev (>= 0.14.2b), hermes1-dev (>= 1.3.2), libarts-dev (>= 2.2.2), libgsm1-dev (>= 1.0.10), libgnomevfs2-dev (>= 2.0.2), libsdl1.2-dev (>= 1.2.4), libaudiofile-dev (>= 0.2.3), libavifile0.7-dev (>= 0.7.12.20020719), festival-dev (>= 1.4.2), libflac-dev (>= 1.0.3), libmpeg2-1-dev (>= 0.2.1), libcpuaccel0-dev (>= 0.2.1), pkg-config (>= 0.11.0), libsidplay1-dev (>= 1.36.47), libmikmod2-dev (>= 3.1.10), liba52-0.7.3-dev (>= 0.7.3), libdvdread2 (>= 0.9.3), libid3tag0-dev (>= 0.14.2b), libgconf2-dev (>= 1.2.0), libdvdnav-dev (>= 0.1.1), libjack0.34.0-dev (>= 0.34.0), libdv-dev (>= 0.9.5), ladspa-sdk (>= 1.0)
 Standards-Version: 3.5.6
 
-Package: gstreamer-all
+Package: gstreamer-plugins
 Architecture: any
 Section: libs
-Depends: gstreamer-a52dec, gstreamer-aa, gstreamer-alsa, gstreamer-arts, gstreamer-artsd, gstreamer-audiofile, gstreamer-avifile, gstreamer-cdparanoia, gstreamer-colorspace, gstreamer-core, gstreamer-misc, gstreamer-dvd, gstreamer-esd, gstreamer-festival, gstreamer-flac, gstreamer-gnomevfs, gstreamer-gsm, gstreamer-jpeg, gstreamer-lib-misc, gstreamer-mad, gstreamer-mikmod, gstreamer-mpeg2dec, gstreamer-oss, gstreamer-sdl, gstreamer-sid, gstreamer-vorbis, gstreamer-x
+Depends: gstreamer-plugin-apps, gstreamer-plugin-libs, gstreamer-a52dec, gstreamer-aa, gstreamer-alsa, gstreamer-arts, gstreamer-artsd, gstreamer-audiofile, gstreamer-avifile, gstreamer-cdparanoia, gstreamer-colorspace, gstreamer-core, gstreamer-core-libs, gstreamer-misc, gstreamer-dv, gstreamer-dvd, gstreamer-esd, gstreamer-festival, gstreamer-flac, gstreamer-gconf, gstreamer-gnomevfs, gstreamer-gsm, gstreamer-http, gstreamer-jack, gstreamer-jpeg, gstreamer-mad, gstreamer-mikmod, gstreamer-mpeg2dec, gstreamer-oss, gstreamer-sdl, gstreamer-sid, gstreamer-vorbis, gstreamer-x
 Description: Pseudo package for all GStreamer plugins
  Pseudo package which depends on all current GStreamer plugin packages.
  .
  NOTE: This package depends on many other packages.
 
-Package: gstreamer-lib-misc
+Package: gstreamer-plugin-apps
+Architecture: any
+Section: x11
+Depends: ${shlibs:Depends}
+Recommends: gstreamer-plugins
+Description: Simple GStreamer applications
+ Simple GStreamer applications
+ .
+ gst-launch-ext - wrapper script around common gst-launch pipelines
+ gst-visualise - simple visualization script
+
+Package: gstreamer-plugin-libs
 Architecture: any
 Section: libs
 Depends: ${shlibs:Depends}
@@ -27,18 +38,18 @@ Description: Various GStreamer library plugins
  gstriff
  gstresample
 
-Package: gstreamer-lib-misc-dev
+Package: gstreamer-plugin-libs-dev
 Architecture: any
 Section: devel
-Depends: gstreamer-lib-misc
+Depends: gstreamer-plugin-libs
 Description: Development files for various GStreamer library plugins
  Development files for various GStreamer library plugins
- Includes support for library plugins found in gstreamer-lib-misc
+ Includes support for library plugins found in gstreamer-plugin-libs
 
 Package: gstreamer-a52dec
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-lib-core, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-core-libs, gstreamer-runtime (>= 0.4.0)
 Description: ATSC A/52 audio decoder plugin for GStreamer
  ATSC A/52 audio decoder plugin for GStreamer
  Uses liba52.
@@ -48,7 +59,7 @@ Description: ATSC A/52 audio decoder plugin for GStreamer
 Package: gstreamer-aa
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: AA-lib plugin for GStreamer
  AA-lib plugin for GStreamer
  .
@@ -57,7 +68,7 @@ Description: AA-lib plugin for GStreamer
 Package: gstreamer-alsa
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-lib-core, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-core-libs, gstreamer-runtime (>= 0.4.0)
 Description: ALSA plugin for GStreamer
  ALSA plugin for GStreamer
  .
@@ -66,7 +77,7 @@ Description: ALSA plugin for GStreamer
 Package: gstreamer-arts
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: aRts plugin for GStreamer
  Analog Realtime Synthesizer (aRts) plugin for GStreamer
  .
@@ -75,7 +86,7 @@ Description: aRts plugin for GStreamer
 Package: gstreamer-artsd
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: aRtsd plugin for GStreamer
  Analog Realtime Synthesizer daemon (aRtsd) plugin for GStreamer
  .
@@ -84,14 +95,14 @@ Description: aRtsd plugin for GStreamer
 Package: gstreamer-audiofile
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-lib-misc, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-plugin-libs, gstreamer-runtime (>= 0.4.0)
 Description: AudioFile plugin for GStreamer
  AudioFile plugin for GStreamer
 
 Package: gstreamer-avifile
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: avifile plugin for GStreamer
  avifile plugin for GStreamer
  .
@@ -100,7 +111,7 @@ Description: avifile plugin for GStreamer
 Package: gstreamer-cdparanoia
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: cdparanoia plugin for GStreamer
  cdparanoia plugin for GStreamer
  .
@@ -109,65 +120,101 @@ Description: cdparanoia plugin for GStreamer
 Package: gstreamer-colorspace
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: colorspace conversion plugin for GStreamer
  colorspace conversion plugin for GStreamer
+
+Package: gstreamer-dv
+Architecture: any
+Section: libs
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
+Description: DV plugin for GStreamer
+ DV plugin for GStreamer based on libdv.
+ .
+ http://libdv.sourceforge.net/
 
 Package: gstreamer-dvd
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: DVD plugin for GStreamer
- DVD plugin for GStreamer based on libdvdread.
+ DVD plugins for GStreamer based on libdvdread and libdvdnav.
+ .
+ http://dvd.sourceforge.net/
 
 Package: gstreamer-esd
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: Enlightened Sound Daemon plugin for GStreamer
  Enlightened Sound Daemon plugin for GStreamer
 
 Package: gstreamer-festival
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: Festival speech synthesis plugin for GStreamer
  Festival speech synthesis plugin for GStreamer
 
 Package: gstreamer-flac
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: FLAC plugin for GStreamer
  Free Lossless Audio Codec (FLAC) plugin for GStreamer
  .
  http://flac.sourceforge.net/
 
+Package: gstreamer-gconf
+Architecture: any
+Section: libs
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
+Description: GConf plugin and support for GStreamer
+ GConf plugin and support for GStreamer
+ .
+ http://www.gnome.org/projects/gconf/
+
 Package: gstreamer-gnomevfs
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: Gnome VFS plugin for GStreamer
  Gnome VFS plugin for GStreamer
 
 Package: gstreamer-gsm
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: gsm plugin for GStreamer
  gsm plugin for GStreamer
+
+Package: gstreamer-http
+Architecture: any
+Section: libs
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
+Description: http plugin for GStreamer
+ http plugin for GStreamer
+
+Package: gstreamer-jack
+Architecture: any
+Section: libs
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
+Description: jack plugin for GStreamer
+ jack plugin for GStreamer
+ .
+ http://jackit.sourceforge.net/
 
 Package: gstreamer-jpeg
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: jpeg plugin for GStreamer
  jpeg plugin for GStreamer
 
 Package: gstreamer-mad
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: MAD MPEG audio decoder plugin for GStreamer
  MAD MPEG audio decoder plugin for GStreamer
  .
@@ -176,7 +223,7 @@ Description: MAD MPEG audio decoder plugin for GStreamer
 Package: gstreamer-mikmod
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: MikMod decoder plugin for GStreamer
  MikMod decoder plugin for GStreamer.
  MikMod is able to decode the IT, XM, S3M, MTM, 669, STM, ULT, FAR,
@@ -187,7 +234,7 @@ Description: MikMod decoder plugin for GStreamer
 Package: gstreamer-misc
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-lib-core, gstreamer-lib-misc, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-core-libs, gstreamer-plugin-libs, gstreamer-runtime (>= 0.4.0)
 Description: Collection of various GStreamer plugins
  Collection of various GStreamer plugins
  .
@@ -196,7 +243,7 @@ Description: Collection of various GStreamer plugins
 Package: gstreamer-mpeg2dec
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: MPEG1 and MPEG2 video decoder plugin for GStreamer
  MPEG1 and MPEG2 video decoder plugin for GStreamer
  Uses libmpeg2
@@ -206,14 +253,14 @@ Description: MPEG1 and MPEG2 video decoder plugin for GStreamer
 Package: gstreamer-oss
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: OSS plugin for GStreamer
  OSS plugin for GStreamer
 
 Package: gstreamer-sdl
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: SDL videosink plugin for GStreamer
  SDL videosink plugin for GStreamer
  .
@@ -222,7 +269,7 @@ Description: SDL videosink plugin for GStreamer
 Package: gstreamer-sid
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: C64 SID decoder plugin for GStreamer
  C64 SID decoder plugin for GStreamer.
  Capable of playing music written for C64 SID chip (MOS 6581) and
@@ -234,7 +281,7 @@ Description: C64 SID decoder plugin for GStreamer
 Package: gstreamer-vorbis
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: Vorbis plugin for GStreamer
  Vorbis plugin for GStreamer
  .
@@ -243,7 +290,7 @@ Description: Vorbis plugin for GStreamer
 Package: gstreamer-x
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.3.3)
+Depends: ${shlibs:Depends}, gstreamer-runtime (>= 0.4.0)
 Description: X videosink plugin for GStreamer
  X videosink plugin for GStreamer
  .
