--- a/gst-plugins-base/debian/rules
+++ b/gst-plugins-base/debian/rules
@@ -1,22 +1,14 @@
 #!/usr/bin/make -f
-# Sample debian/rules that uses debhelper. 
-# GNU copyright 1997 by Joey Hess.
-#
 
-# Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
-
-# This is the debhelper compatability version to use.
 export DH_COMPAT=3
-
-# This has to be exported to make some magic below work.
 export DH_OPTIONS
 
 # The plugins are basically the same.
 # Link special names to a template file.
 # still need "*.files" to be done by hand
 
-PLUGINS=a52dec aa alsa arts artsd audiofile avifile cdparanoia colorspace dvd esd festival flac gnomevfs gsm jpeg mad mikmod misc mpeg2dec oss sdl sid vorbis x
+PLUGINS=a52dec aa alsa arts artsd audiofile avifile cdparanoia colorspace dv dvd esd festival flac gnomevfs gsm http jack jpeg mad mikmod misc mpeg2dec oss sdl sid vorbis x
 
 setup-links:
 	for i in $(PLUGINS); do \
@@ -52,17 +44,12 @@ configure-stamp:
 		--mandir=\$${prefix}/share/man \
 		--infodir=\$${prefix}/share/info \
 		--sysconfdir=/etc \
-		--disable-plugin-builddir \
 		--disable-tests \
 		--disable-examples \
 		--disable-docs-build \
 		--disable-plugin-docs \
 		--enable-DEBUG \
 		--enable-debug
-
-		# FIXME reenable when build is less painful
-		#--enable-docs-build \
-		#--disable-plugin-docs \
 
 	touch configure-stamp
 
@@ -92,12 +79,6 @@ clean:
 		rm -f debian/gstreamer-$$i.postrm; \
 	done
 
-	# FIXME some extra clean up
-	rm -rf debian/gst-plugins
-	find . -name \*.stamp | xargs rm || true
-	find . -name Makefile | xargs rm || true
-
-
 install: DH_OPTIONS=
 install: build
 	dh_testdir
@@ -106,10 +87,11 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/gst-plugins.
-	$(MAKE) prefix=$(CURDIR)/debian/gst-plugins/usr install
+	GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 \
+	DESTDIR=$(CURDIR)/debian/gst-plugins \
+	$(MAKE) prefix=$(DESTDIR)/usr install
 
 	dh_movefiles --sourcedir=debian/gst-plugins
-
 
 # Build architecture-independent files here.
 # Pass -i to all debhelper commands in this target to reduce clutter.
@@ -118,28 +100,15 @@ binary-indep: build install
 # Need this version of debhelper for DH_OPTIONS to work.
 	dh_testdir
 	dh_testroot
-#	dh_installdebconf
 	dh_installdocs -A debian/README.Debian
 	dh_installexamples
 	dh_installmenu
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installinit
-#	dh_installcron
 	dh_installman
-#	dh_installinfo
-#	dh_undocumented
 	dh_installchangelogs
 	dh_strip
-#	dh_link
 	dh_compress
 	dh_fixperms
-# You may want to make some executables suid here.
-#	dh_suidregister
-#	dh_makeshlibs
 	dh_installdeb
-#	dh_perl
-#	dh_shlibdeps
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
@@ -151,27 +120,16 @@ binary-arch: build install setup-links
 # Need this version of debhelper for DH_OPTIONS to work.
 	dh_testdir
 	dh_testroot
-#	dh_installdebconf
 	dh_installdocs -A debian/README.Debian
 	dh_installexamples
 	dh_installmenu
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installinit
-#	dh_installcron
 	dh_installman
-#	dh_installinfo
-#	dh_undocumented
 	dh_installchangelogs
 	dh_strip
-#	dh_link
 	dh_compress
 	dh_fixperms
-# You may want to make some executables suid here.
-#	dh_suidregister
 	dh_makeshlibs
 	dh_installdeb
-#	dh_perl
 	dh_shlibdeps
 	dh_gencontrol
 	dh_md5sums
