--- a/gst-plugins-base/ext/Makefile.am
+++ b/gst-plugins-base/ext/Makefile.am
@@ -46,12 +46,6 @@ else
 CDPARANOIA_DIR=
 endif
 
-if USE_DV
-LIBDV_DIR=dv
-else
-LIBDV_DIR=
-endif
-
 if USE_DVDREAD
 DVDREAD_DIR=dvdread
 else
@@ -134,6 +128,12 @@ if USE_LCS
 LCS_DIR=lcs
 else
 LCS_DIR=
+endif
+
+if USE_LIBDV
+LIBDV_DIR=dv
+else
+LIBDV_DIR=
 endif
 
 if USE_LIBFAME
@@ -228,11 +228,11 @@ endif
 
 SUBDIRS=$(A52DEC_DIR) $(AALIB_DIR) $(ALSA_DIR) \
         $(ARTS_DIR) $(ARTSC_DIR) $(AUDIOFILE_DIR) \
-	$(AVIFILE_DIR) $(CDPARANOIA_DIR) $(LIBDV_DIR) \
+	$(AVIFILE_DIR) $(CDPARANOIA_DIR) \
 	$(DVDREAD_DIR) $(DVDNAV_DIR) $(ESD_DIR) \
 	$(FLAC_DIR) $(GNOMEVFS_DIR) $(GSM_DIR) \
 	$(HERMES_DIR) $(HTTP_DIR) $(JACK_DIR) $(JPEG_DIR) \
-	$(LADSPA_DIR) $(LAME_DIR) $(LCS_DIR) $(LIBFAME_DIR) \
+	$(LADSPA_DIR) $(LAME_DIR) $(LCS_DIR) $(LIBDV_DIR) $(LIBFAME_DIR) \
 	$(MAD_DIR) $(MIKMOD_DIR) $(MJPEGTOOLS_DIR) $(MPEG2DEC_DIR) \
 	$(OPENQUICKTIME_DIR) $(RAW1394_DIR) $(RTP_DIR) \
 	$(SDL_DIR) $(SHOUT_DIR) $(SIDPLAY_DIR) \
