--- a/gst-plugins-base/ext/Makefile.am
+++ b/gst-plugins-base/ext/Makefile.am
@@ -208,6 +208,12 @@ else
 SMOOTHWAVE_DIR=
 endif
 
+if USE_SWFDEC
+SWFDEC_DIR=swfdec
+else
+SWFDEC_DIR=
+endif
+
 if USE_TARKIN
 TARKIN_DIR=tarkin
 else
@@ -236,7 +242,8 @@ SUBDIRS=$(A52DEC_DIR) $(AALIB_DIR) $(ALSA_DIR) \
 	$(MAD_DIR) $(MIKMOD_DIR) $(MJPEGTOOLS_DIR) $(MPEG2DEC_DIR) \
 	$(OPENQUICKTIME_DIR) $(RAW1394_DIR) $(RTP_DIR) \
 	$(SDL_DIR) $(SHOUT_DIR) $(SIDPLAY_DIR) \
-	$(SMOOTHWAVE_DIR) $(TARKIN_DIR) $(VORBIS_DIR) $(XMMS_DIR)
+	$(SMOOTHWAVE_DIR) $(SWFDEC_DIR) $(TARKIN_DIR) \
+	$(VORBIS_DIR) $(XMMS_DIR)
 
 DIST_SUBDIRS=\
 	a52dec aalib alsa \
