--- a/gst-plugins-base/configure.ac
+++ b/gst-plugins-base/configure.ac
@@ -22,7 +22,8 @@ AM_CONFIG_HEADER(config.h)
 
 dnl Add parameters for aclocal
 dnl (This must come after AM_INIT_AUTOMAKE, since it modifies ACLOCAL)
-ACLOCAL_AMFLAGS="-I m4 -I common/m4"
+ACLOCAL_FLAGS="-I m4 -I common/m4"
+AC_SUBST(ACLOCAL_AMFLAGS, $ACLOCAL_FLAGS)
 
 AC_PROG_CC
 AM_PROG_CC_STDC
